--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -10,7 +10,7 @@ http://code.google.com/p/v8-juice/source/browse/
 
 ----
 *2009 March 15*
-  * Started reimplementing the sqlite3 plugin to use class binding, rather an v8::External, for most argument handling.
+  * Started reimplementing the [PluginSQLite3 sqlite3 plugin] to use class binding, rather an v8::External, for most argument handling.
 
 *2009 March 13/14*
   * Refactored member function binding code significantly.
