--- a/wiki/PluginSprintf.wiki
+++ b/wiki/PluginSprintf.wiki
@@ -28,7 +28,7 @@ hi, [object Object]!
 42         42          a a       42.240000
 }}}
 
-The function supports a few extensioned formatting options, such as `%h` to escape HTML, `%q` and `%Q` for SQL escaping, and `%t/%T` for URL encoding/decoding.
+The function supports a few extension formatting options, such as `%h` to escape HTML, `%q` and `%Q` for SQL escaping, and `%t/%T` for URL encoding/decoding.
 
 It might be interesting to know that the native implementation code was derived from:
 http://fossil.wanderinghorse.net/repos/whprintf/
